# LLM-Lifecycle-Toolkit

./: .gitattributes  .gitignore  README.md  pyproject.toml
questao5/: comparacao_rag_sem_rag.xlsx  generated_benchmark_questions.json  rag pipeline.ipynb
question_1/: README.md  final_delivery.md
question_1/01_documentation/: README.md  audit_benchmark_gold_contexts_compact.md  dompi_2025_continued_pretraining_documentation.md  dompi_2025_report.json  tucano2_dompi_10k_experiment_plan.md  tucano2_dompi_response_comparison_corrected.md
question_1/02_report/: README.md
question_1/03_code/: README.md  audit_contextual_benchmark.py  evaluate_base_model_dompi_2025.py  evaluate_benchmark_25_v2.py  generate_contextual_benchmark_25_v2.py  generate_specific_benchmark_25_v1.py  prepare_benchmark_dataset.py  prepare_dompi_2025.py  prepare_tucano2_dompi_10k_experiment.py  run_tucano2_dompi_10k_loraplus.ps1  setup_gpu_windows.ps1  train_continued_pretraining_gpu.py
question_1/04_benchmark_data/: README.md
question_1/05_results/: README.md
question_1/06_model_adapters/: README.md
question_2/02_report/: 02_report_README.md
question_2/03_code/: avaliacao_q4_COLAB (1).ipynb  montar_benchmark_q4.py  validar_dataset_cot.py
question_2/04_benchmark_data/: benchmark_q4.json
question_2/06_model_adapters/: 06_model_adapters_README.md
question_4/: README.md  final_delivery.md
question_4/01_documentation/: 01_documentation_README.md  GUIA_COLAB_treino.md  PLANEJAMENTO_Q4_Destilacao.md
question_6/: benchmark_guardrails_q6.json  guardrails_TF.ipynb
(+65 files in other folders)
