[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=5.0.0",
    "langchain-community<0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-vertexai>=3.2.4",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "matplotlib>=3.11.0",
    "nest-asyncio>=1.6.0",
    "openpyxl>=3.1.5",
    "ragas>=0.2,<0.3",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "torch>=2.11.0",
    "torchvision",
    "torchaudio",
    "tqdm>=4.68.2",
    "transformers>=5.12.0",
    "peft>=0.19.1",
    "bitsandbytes>=0.49.2",
    "accelerate>=1.14.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
